<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            >

            <Button
                android:id="@+id/actionTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_true"
                />

            <Button
                android:id="@+id/actionFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_false"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>



    </LinearLayout>

</FrameLayout>